--- a/playbook.yml
+++ b/playbook.yml
@@ -7,6 +7,9 @@
   
   tasks:
     - name: Install Miniconda
+      become: yes
+      become_user: vagrant
+      become_method: su
       block:
       - name: Make miniconda directory
         ansible.builtin.file:
